--- a/css/styles.css
+++ b/css/styles.css
@@ -1,24 +1,130 @@
 body {
-    font-family: Arial, sans-serif;
-    max-width: 800px;
-    margin: 0 auto;
+    font-family: 'Open Sans', Arial, sans-serif;
+    line-height: 1.6;
+    color: #4a4a4a;
+    font-size: 16px;
+}
+
+h1, h2 {
+    color: #4a4a4a;
+    font-weight: 300;
+    margin-top: 0;
+}
+
+h1 {
+    font-size: 36px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+button {
+    background-color: #2ecc71;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    cursor: pointer;
+    margin: 8px 4px;
+    font-size: 16px;
+    border-radius: 3px;
+    text-transform: uppercase;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    letter-spacing: 1px;
+}
+
+button:hover {
+    background-color: #27ae60;
+}
+
+button.select-all-btn,
+button.filter-out-all-btn {
+  background-color: #27ae60;
+  border: none;
+  color: white;
+  padding: 8px 12px;
+  margin: 4px;
+  cursor: pointer;
+}
+
+button.filter-btn {
+  background-color: #007bff;
+  border: none;
+  color: white;
+  padding: 8px 12px;
+  margin: 4px;
+  cursor: pointer;
+}
+
+button.filter-btn.filtered-out {
+  background-color: #ccc;
+}
+
+.drop-zone {
+    border: 2px dashed #ccc;
     padding: 20px;
-  }
-  
-  textarea {
-    width: 100%;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.drop-zone:hover {
+    border-color: #999;
+    background-color: #f0f0f0;
+}
+
+.error-message {
+    color: red;
+}
+
+.json-key {
+    font-weight: bold;
+    display: inline;
+}
+
+.json-node {
+    margin-left: 20px;
+}
+
+#json-viewer,
+#errors-viewer {
     box-sizing: border-box;
-  }
-  
-  button {
-    display: inline-block;
-    margin: 10px 0;
-  }
-  
-  #json-viewer {
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    overflow-x: auto;
     border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px 0;
-    white-space: pre-wrap;
-  }
-  
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.left-side {
+    width: 45%;
+}
+
+.right-side {
+    width: 45%;
+}
+
+.spinner {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid #3498db;
+    width: 30px;
+    height: 30px;
+    animation: spin 2s linear infinite;
+    margin: 0 auto;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
