--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,8 @@ button.filter-btn.filtered-out {
     border: 2px dashed #ccc;
     padding: 20px;
     text-align: center;
-    margin-bottom: 20px;
+    margin-bottom: 20px;    
+    width: 50%;
 }
 
 .drop-zone:hover {
@@ -100,6 +101,11 @@ button.filter-btn.filtered-out {
 .container {
     display: flex;
     justify-content: space-between;
+}
+
+.container-dropZone {
+    display: flex;
+    align-items: center;
 }
 
 .left-side {
