--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,11 @@ button.filter-btn.filtered-out {
     margin: 0 auto;
 }
 
+.disabled {
+    background-color: #cccccc;
+    cursor: not-allowed;
+}
+
 @keyframes spin {
     0% {
         transform: rotate(0deg);
